# stratum-v2-tools

./: .dockerignore  .gitignore  BITCOIN_SETUP.md  BUILD_ISSUES.md  Cargo.toml  DEMO_SUCCESS.md  DOCKER.md  Dockerfile  Dockerfile.alpine  README.md  ROADMAP.md  SIGNET_TESTING.md  START_DEMO.sh  SV2_PROOF_DOCUMENT.md  TESTING_GUIDE.md  WORKSHOP_GUIDE.md  docker-compose.yml  end_to_end_test.py
config/: signet_solo.toml  sri_pool_regtest.toml  sri_pool_signet.toml  translator_config.WORKING.toml  translator_config.toml  translator_config_signet.toml
examples/configs/: README.md  bitaxe-regtest.toml  bitaxe-signet.toml
migrations/postgres/: 001_initial.sql
migrations/sqlite/: 001_initial.sql
scripts/: build.sh  check-dependencies.sh  com.sv2d.daemon.plist  deploy-containers.sh  install-linux-aarch64.sh  install-linux-x86_64.sh  install-macos-aarch64.sh  install-macos-x86_64.sh  install-windows-x86_64.sh  sv2d.service  test-containers.sh  test-packaging.sh  test-signet.sh
sv2-cli/: Cargo.toml
sv2-cli/src/: client.rs  lib.rs  main.rs  scanner.rs
sv2-cli/src/commands/: auth.rs  daemon_control.rs  mod.rs  monitor.rs  setup.rs  status.rs
sv2-cli/tests/: command_tests.rs  integration_tests.rs  monitor_tests.rs  setup_tests.rs
sv2-core/: Cargo.toml
sv2-core/examples/: config_demo.rs  pool_config.toml  proxy_config.toml  solo_config.toml  solo_mining_demo.rs
sv2-core/src/: api_server.rs  api_server_integration_tests.rs  auth.rs  auth_integration_tests.rs  bitcoin_rpc.rs  bitcoin_rpc_integration_tests.rs  config.rs  connection_auth.rs  daemon.rs  database.rs  error.rs  health.rs  lib.rs  logging.rs  metrics.rs  mode.rs  mode_factory.rs  protocol.rs  protocol_backup.rs  protocol_integration_tests.rs  recovery.rs  server.rs  server_integration_tests.rs  share_validator.rs  types.rs  validation.rs
sv2-core/src/logging/: tests.rs
sv2-core/src/modes/: client.rs  mod.rs  pool.rs  proxy.rs  proxy_protocol.rs  solo.rs
sv2-core/src/recovery/: tests.rs
sv2-test/: Cargo.toml
sv2-test/examples/: hardware_compatibility_demo.rs  performance_load_demo.rs  simple_test_demo.rs
sv2-test/src/: antminer_s9_tests.rs  automated_hardware_validation.rs  bitaxe_tests.rs  daemon_lifecycle_tests.rs  database_integration_tests.rs  end_to_end_mining_tests.rs  hardware_compatibility_tests.rs  hardware_integration_tests.rs  hardware_test_runner.rs  integration.rs  lib.rs  mocks.rs  mode_switching_tests.rs  networking_tests.rs  performance_load_tests.rs  pool_load_tests.rs  proxy_integration_tests.rs  proxy_tests.rs  server_connectivity_tests.rs  share_validation_tests.rs  simple_hardware_tests.rs  utils.rs  whatsminer_tests.rs
sv2-test/tests/: networking_integration_test.rs
sv2-web/: Cargo.toml  README.md  sv2d.db
sv2-web/examples/: api_demo.rs
sv2-web/src/: auth_middleware.rs  handlers.rs  lib.rs  main.rs  validation_middleware.rs  websocket.rs
sv2-web/static/: index.html
sv2-web/static/css/: charts.css  dashboard.css
sv2-web/static/js/: charts.js  dashboard.js  websocket.js
sv2-web/tests/: api_integration_tests.rs  web_server_tests.rs  websocket_integration_tests.rs
sv2d/: Cargo.toml
sv2d/src/: bitcoin.rs  daemon.rs  main.rs
