[package]
name = "sv2-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sv2-core = { path = "../sv2-core", features = ["test-utils"] }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
tempfile = "3.8"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tracing = { workspace = true }