[package]
name = "sv2-web"
version = "0.1.0"
edition = "2021"

[lib]
name = "sv2_web"
path = "src/lib.rs"

[[bin]]
name = "sv2-web"
path = "src/main.rs"

[dependencies]
sv2-core = { path = "../sv2-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }
hyper = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies for API functionality
uuid = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
bitcoin = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = { workspace = true }
hyper = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }