[package]
name = "sv2d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sv2d"
path = "src/main.rs"

[dependencies]
sv2-core = { path = "../sv2-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
sqlx = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }