[package]
name = "sv2d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sv2d"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for proxy mode wrapper
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }