[package]
name = "sv2d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sv2d"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Network dependencies
hyper = { workspace = true }
reqwest = { workspace = true }
tokio-util = "0.7"